updated User models and fixed bug of data not being added to mongoDB

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL=mongodb+srv://SEI-Project3:IuffBYUtkcdYBHcY@noms-on-wheels.sqyrd.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://Nom-on-Wheels:gChxFAxylsqvQ91s@nom-on-wheels.ckzimip.mongodb.net/NOW?retryWrites=true&w=majority
